--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:132381301913:ios:7cf4a8a242e6a1ca1eec08",
-  "FIREBASE_PROJECT_ID": "flutterfire-samples",
-  "GCM_SENDER_ID": "132381301913"
+  "GOOGLE_APP_ID": "1:6011918544:ios:f97b010484d18c223526d5",
+  "FIREBASE_PROJECT_ID": "descartable-server",
+  "GCM_SENDER_ID": "6011918544"
 }
